--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My CI/CD Web App</title>
+    <title>My Web App</title>
 </head>
 <body>
-    <h1>Hello, CI/CD Pipeline!</h1>
-    <p>This page is automatically deployed.</p>
+    <h1>Hello, World!</h1>
+    <p>This is my CI/CD pipeline demo!</p>
 </body>
 </html>
